[project]
name = "eontrading-webull"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "python-dotenv>=1.2.1",
    "webull-python-sdk-core>=0.1.18",
    "webull-python-sdk-mdata>=0.1.18",
    "webull-python-sdk-quotes-core>=0.1.18",
    "webull-python-sdk-trade>=0.1.18",
    "webull-python-sdk-trade-events-core>=0.1.18",
]
